--- a/.redcar/storage/cursor_saver.yaml
+++ b/.redcar/storage/cursor_saver.yaml
@@ -1,8 +1,5 @@
 --- 
 cursor_positions: 
-  - :path: app/assets/stylesheets/application.css
-    :cursor_offset: 523
-    :timestamp: 2013-08-31 07:31:50 +05:30
   - :path: app/uploaders/userimage_uploader.rb
     :cursor_offset: 652
     :timestamp: 2013-08-31 07:50:45 +05:30
@@ -63,18 +60,9 @@ cursor_positions:
   - :path: app/views/orbituarysites/index.html.erb
     :cursor_offset: 502
     :timestamp: 2013-08-31 12:25:21 +05:30
-  - :path: db/migrate/20130831114150_create_orbituarysites.rb
-    :cursor_offset: 149
-    :timestamp: 2013-08-31 12:16:32 +05:30
-  - :path: app/assets/javascripts/application.js
-    :cursor_offset: 677
-    :timestamp: 2013-08-31 11:43:18 +05:30
   - :path: config/application.rb
     :cursor_offset: 843
     :timestamp: 2013-08-31 11:42:48 +05:30
-  - :path: config/routes.rb
-    :cursor_offset: 458
-    :timestamp: 2013-08-31 12:08:44 +05:30
   - :path: Gemfile
     :cursor_offset: 964
     :timestamp: 2013-08-31 11:40:08 +05:30
@@ -89,9 +77,6 @@ cursor_positions:
   - :path: app/views/layouts/application.html.erb
     :cursor_offset: 2689
     :timestamp: 2013-08-31 12:49:49 +05:30
-  - :path: app/views/orbituarysites/_form.html.erb
-    :cursor_offset: 0
-    :timestamp: 2013-08-31 12:40:27 +05:30
   - :path: db/migrate/20130831114156_create_condolences.rb
     :cursor_offset: 204
     :timestamp: 2013-08-31 12:12:48 +05:30
@@ -104,15 +89,6 @@ cursor_positions:
   - :path: app/models/user.rb
     :cursor_offset: 630
     :timestamp: 2013-08-31 11:59:41 +05:30
-  - :path: app/models/notice_event_place.rb
-    :cursor_offset: 205
-    :timestamp: 2013-08-31 13:00:53 +05:30
-  - :path: app/models/notice_event_contact.rb
-    :cursor_offset: 149
-    :timestamp: 2013-08-31 13:00:40 +05:30
-  - :path: app/models/notice_display.rb
-    :cursor_offset: 194
-    :timestamp: 2013-08-31 13:01:57 +05:30
   - :path: app/models/memory.rb
     :cursor_offset: 77
     :timestamp: 2013-08-31 13:00:14 +05:30
@@ -127,44 +103,131 @@ cursor_positions:
     :timestamp: 2013-08-31 13:00:00 +05:30
     :selection_offset: 135
     :block_selection_mode: false
-  - :path: app/models/orbituarysite.rb
-    :cursor_offset: 332
-    :timestamp: 2013-08-31 13:13:40 +05:30
   - :path: app/assets/javascripts/orbituarysites.js.coffee
     :cursor_offset: 0
     :timestamp: 2013-08-31 11:56:35 +05:30
   - :path: app/controllers/orbiturer_share_images_controller.rb
     :cursor_offset: 165
     :timestamp: 2013-08-31 13:08:11 +05:30
-  - :path: app/controllers/notice_event_places_controller.rb
-    :cursor_offset: 156
-    :timestamp: 2013-08-31 13:07:58 +05:30
   - :path: app/controllers/notice_event_contacts_controller.rb
     :cursor_offset: 162
     :timestamp: 2013-08-31 13:07:52 +05:30
-  - :path: app/controllers/notice_displays_controller.rb
-    :cursor_offset: 145
-    :timestamp: 2013-08-31 13:07:44 +05:30
   - :path: app/controllers/memories_controller.rb
     :cursor_offset: 125
     :timestamp: 2013-08-31 13:07:34 +05:30
   - :path: app/controllers/histories_controller.rb
     :cursor_offset: 128
     :timestamp: 2013-08-31 13:07:25 +05:30
-  - :path: app/controllers/orbituarysites_controller.rb
-    :cursor_offset: 143
-    :timestamp: 2013-08-31 13:11:25 +05:30
-    :selection_offset: 108
-    :block_selection_mode: false
   - :path: app/views/home/index.html.erb
     :cursor_offset: 713
     :timestamp: 2013-08-31 12:48:15 +05:30
-  - :path: app/uploaders/orbiturer_uploader.rb
-    :cursor_offset: 546
-    :timestamp: 2013-08-31 14:55:23 +05:30
-  - :path: app/views/orbituarysites/show.html.erb
-    :cursor_offset: 542
-    :timestamp: 2013-08-31 15:13:45 +05:30
-    :selection_offset: 541
+  - :path: app/views/notice_event_contacts/_form.html.erb
+    :cursor_offset: 0
+    :timestamp: 2013-09-14 17:33:18 +05:30
+  - :path: app/views/orbituarysites/_form.html.erb
+    :cursor_offset: 1830
+    :timestamp: 2013-09-14 17:49:44 +05:30
+  - :path: app/models/notice_event_contact.rb
+    :cursor_offset: 46
+    :timestamp: 2013-09-14 17:49:44 +05:30
+  - :path: app/views/notice_displays/_event_place.html.erb
+    :cursor_offset: 31
+    :timestamp: 2013-09-14 17:34:11 +05:30
+    :selection_offset: 30
     :block_selection_mode: false
+  - :path: app/views/notice_displays/_event_contact.html.erb
+    :cursor_offset: 515
+    :timestamp: 2013-09-14 17:49:44 +05:30
+  - :path: app/views/condolences/_form.html.erb
+    :cursor_offset: 0
+    :timestamp: 2013-09-14 13:33:58 +05:30
+  - :path: app/views/notice_event_places/_form.html.erb
+    :cursor_offset: 1311
+    :timestamp: 2013-09-14 17:35:02 +05:30
+    :selection_offset: 407
+    :block_selection_mode: false
+  - :path: db/schema.rb
+    :cursor_offset: 3365
+    :timestamp: 2013-09-14 20:05:11 +05:30
+    :selection_offset: 3368
+    :block_selection_mode: false
+  - :path: app/models/notice_display.rb
+    :cursor_offset: 620
+    :timestamp: 2013-09-14 16:24:24 +05:30
+  - :path: app/models/notice_event_place.rb
+    :cursor_offset: 575
+    :timestamp: 2013-09-14 18:54:30 +05:30
+  - :path: app/views/notice_event_places/show.html.erb
+    :cursor_offset: 715
+    :timestamp: 2013-09-14 22:11:34 +05:30
+  - :path: app/controllers/notice_event_places_controller.rb
+    :cursor_offset: 606
+    :timestamp: 2013-09-14 22:11:02 +05:30
+  - :path: app/views/timelines/timeline.json.erb
+    :cursor_offset: 985
+    :timestamp: 2013-09-15 08:46:05 +05:30
+  - :path: app/views/timelines/_timelines.json.erb
+    :cursor_offset: 8369
+    :timestamp: 2013-09-15 10:45:45 +05:30
+  - :path: config/initializers/wrap_parameters.rb
+    :cursor_offset: 459
+    :timestamp: 2013-09-15 08:12:20 +05:30
+  - :path: app/views/timelines/index.html.erb
+    :cursor_offset: 791
+    :timestamp: 2013-09-15 08:05:00 +05:30
+    :selection_offset: 251
+    :block_selection_mode: false
+  - :path: app/assets/stylesheets/application.css
+    :cursor_offset: 610
+    :timestamp: 2013-09-15 07:53:01 +05:30
+  - :path: app/assets/javascripts/application.js
+    :cursor_offset: 765
+    :timestamp: 2013-09-15 07:52:47 +05:30
+  - :path: db/migrate/20130914143416_add_lalo_to_orbituarysite.rb
+    :cursor_offset: 0
+    :timestamp: 2013-09-14 20:04:16 +05:30
+  - :path: db/migrate/20130915022118_create_timelines.rb
+    :cursor_offset: 315
+    :timestamp: 2013-09-15 11:46:54 +05:30
+  - :path: app/models/timeline.rb
+    :cursor_offset: 166
+    :timestamp: 2013-09-15 12:20:32 +05:30
+  - :path: app/models/orbituarysite.rb
+    :cursor_offset: 908
+    :timestamp: 2013-09-15 12:20:18 +05:30
+  - :path: app/controllers/timelines_controller.rb
+    :cursor_offset: 655
+    :timestamp: 2013-09-15 15:51:21 +05:30
+    :selection_offset: 522
+    :block_selection_mode: false
+  - :path: app/controllers/orbituarysites_controller.rb
+    :cursor_offset: 1777
+    :timestamp: 2013-09-15 15:51:56 +05:30
+  - :path: app/controllers/notice_displays_controller.rb
+    :cursor_offset: 822
+    :timestamp: 2013-09-14 20:28:56 +05:30
+  - :path: app/views/timelines/_form.html.erb
+    :cursor_offset: 1094
+    :timestamp: 2013-09-15 13:10:07 +05:30
+  - :path: app/views/notice_displays/_form.html.erb
+    :cursor_offset: 958
+    :timestamp: 2013-09-14 19:36:15 +05:30
+  - :path: app/views/orbituarysites/show.html.erb
+    :cursor_offset: 13290
+    :timestamp: 2013-09-15 15:55:22 +05:30
+  - :path: app/assets/javascripts/timelines.js.coffee
+    :cursor_offset: 229
+    :timestamp: 2013-09-15 13:31:19 +05:30
+  - :path: app/assets/stylesheets/home.css.scss
+    :cursor_offset: 3874
+    :timestamp: 2013-09-15 15:23:37 +05:30
+  - :path: app/uploaders/orbiturer_uploader.rb
+    :cursor_offset: 0
+    :timestamp: 2013-09-14 13:33:58 +05:30
+  - :path: config/routes.rb
+    :cursor_offset: 370
+    :timestamp: 2013-09-15 16:20:15 +05:30
+  - :path: db/migrate/20130831114150_create_orbituarysites.rb
+    :cursor_offset: 313
+    :timestamp: 2013-09-14 20:02:40 +05:30
 files_to_retain: 0
