--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,11 @@ pool: 5
 timeout: 5000
 
 production:
-adapter: sqlite3
-database: db/production.sqlite3
-pool: 5
-timeout: 5000
+  adapter: postgresql
+  encoding: unicode
+  database: notice_pro
+  host: localhost
+  pool: 5
+  username: notice
+  password: notice
+  min_messages: warning
